working on speeding up rendering. needed to remove some validations which were slow. added execution timing display to tracing